--- a/src/css/main.module.css
+++ b/src/css/main.module.css
@@ -1,15 +1,15 @@
 .mainContent {
     height: 100%;
     width: 100%;
-    background-color: rgb(211, 217, 226);
+    background-color: rgb(255, 255, 255);
     grid-area: main;
     flex-direction: row;
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    background: -moz-linear-gradient(130deg, rgb(239, 241, 244) 0%, rgb(211, 217, 226) 100%);
+    /* background: -moz-linear-gradient(130deg, rgb(239, 241, 244) 0%, rgb(211, 217, 226) 100%);
     background: -webkit-linear-gradient(130deg, rgb(239, 241, 244) 0%, rgb(211, 217, 226) 100%);
-    background: linear-gradient(130deg, rgb(239, 241, 244) 0%, rgb(211, 217, 226) 100%);
+    background: linear-gradient(130deg, rgb(239, 241, 244) 0%, rgb(211, 217, 226) 100%); */
 }
 
 .divTiempos {
@@ -17,12 +17,11 @@
     flex-direction: column;
     align-items: center;
     color: white;
-    padding: 1rem;
-    margin: 1rem;
-    border-radius: 2rem;
+    margin: .9rem;
+    border-radius: 1rem;
     border-style: solid;
-    border-color: rgb(94, 178, 47);
-    border-width: 0.8dvh;
+    background-color: rgb(245, 245, 245);
+    margin-right: 2rem;
 }
 
 .contadorTiempos {
@@ -41,11 +40,12 @@
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-
+    background-color: rgb(245 245 245);
     padding: 1%;
     margin: 1rem;
-    border-radius: 2rem;
+    border-radius: 1rem;
     overflow: auto;
+    margin-right: 2rem;
 }
 
 
@@ -98,7 +98,8 @@
     color: rgb(255, 255, 255);
     padding: 1rem;
     margin: 0.5rem;
-    box-shadow: 7px -1px 7px -4px rgba(0, 0, 0, 0.64);
-    -webkit-box-shadow: 7px -1px 7px -4px rgba(0, 0, 0, 0.64);
-    -moz-box-shadow: 7px -1px 7px -4px rgba(0, 0, 0, 0.64);
+    transition: box-shadow .2s ;
+    box-shadow: -5px 7px 27px -7px rgba(0,0,0,0.29);
+    -webkit-box-shadow: -7px 13px 12px 4px rgba(0, 0, 0, 0.13);
+    -moz-box-shadow: -5px 7px 27px -7px rgba(0,0,0,0.29);
 }
